2009-10-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/include/tmacros.h (print_time): Use PRIu32 instead of %d.

2009-10-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/include/test_support.h: Add missing prototypes.
	* support/include/tmacros.h: Move _Thread_Dispatch_disable_level
	outside of check_dispatch_disable_level.

2009-10-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/src/test_support.c: Add missing prototypes.
	* support/include/tmacros.h: Include <inttypes.h>.
	Move extern "C".
	Let put_name use "int" instead "uint32_t" (Arg to putchar must be int).

2009-10-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Add support/include/test_support.h.

2009-10-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* automake/compile.am: Add *.ralf to clean-local.

2009-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-custom-bsp.m4: Fix up AC_REQUIRES.

2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/canonical-target-name.m4: Remove RTEMS_HOST (unused).

2009-10-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/canonical-target-name.m4:
	Remove posix/unix simulator.

2009-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxtests/psxclock/init.c, psxtests/psxclock/psxclock.scn: Add test
	case for nanosleep of a very small delay which mathematically is less
	than a clock tick.

2009-09-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Some POSIX tests exercise functionality which is
	enabled when the POSIX threading is disabled. So build this suite all
	the time and let the psxtests select the specific tests to build.

2009-08-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* support/include/tmacros.h: Eliminate test routines TICKS_PER_SECOND
	and get_ticks_per_second() in favor of new
	rtems_clock_get_ticks_per_second().

2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* support/src/test_support.c: Tinker with longest valid name.
